# infrastructure

./: .gitignore  .gitmodules  README.md  ansible.cfg  flake.nix  justfile  pyproject.toml  renovate.json  requirements.yml  shell.nix
.github/workflows/: renovate.yml
inventory/: hosts.ini
inventory/group_vars/: ansible.yml  dockerhost.yml  electron.yml  forgejo.yml  nextcloud.yml  omada.yml  papermc.yml  pirate.yml  potato.yml  sbc.yml  systemd-test.yml  zabbix.yml
inventory/service_configs/: actual.yml  arr-stack.yml  authelia.yml  bookstack.yml  calibre.yml  forgejo.yml  freshrss.yml  grafana.yml  ha.yml  headscale.yml  homepage.yml  immich.yml  jellyfin.yml  librum.yml  miniflux.yml  n8n.yml  netboot.yml  nextcloud.yml  omada.yml  outline.yml  paperless.yml  papermc.yml  portainer-agent.yml  portainer.yml  postgres.yml  prometheus.yml  scrutiny.yml  stirling-pdf.yml  syncthing.yml  test.yml  tmp.yml  traefik.yml  uptime-kuma.yml  vaultwarden.yml  vikunja.yml  wikijs.yml
playbooks/: configure.yml  notification.yml  pve_reboot.yml  ssh.yml  start_docker.yml  systemd.yml  update.yml
roles/: systemd_timer
roles/docker_firewalld/tasks/: main.yml
roles/docker_start/: .gitignore
roles/docker_start/tasks/: backup_postgres.yml  general.yml  main.yml
roles/pve_reboot/tasks/: main.yml
vars/: vault.yml
