[tool.poetry]
name = "infrastructure"
version = "0.1.0"
description = ""
authors = ["Gabe Miles <gabrielmiles32@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ansible = "^12.0.0"
cryptography = "46.0.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
